# Engineering-Cognitive-AI-Agents

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  pytest.ini  ruff.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
chapter01/: pyproject.toml
chapter01/src/chapter01/: __init__.py
chapter02/: pyproject.toml
chapter02/src/chapter02/: basic_kernel.py  main.py  minimal_kernel.py  mock_tools.py  tool_registry.py
chapter03/: mcp_config.json  pyproject.toml
chapter03/src/chapter03/: __init__.py  kernel.py
chroma-repl/: README.md  pyproject.toml
chroma-repl/src/chroma_repl/: __init__.py  main.py
common/: pyproject.toml
common/src/common/: __init__.py  config.py  intent_database.py  intent_generator.py  mcp_host.py  paths.py
config/agents/cognitive_loop/: coordinator.yaml  result_analyst.yaml
config/agents/memory/semantic/: storage.yaml
config/agents/reasoning/: coordinator.yaml  hypothesis.yaml  inquiry.yaml  validation.yaml
docs/: surface.md
docs/ai/: deepseek.md  guidelines.md
docs/book/: _00_guide.md  _01_writing_guidelines.md  _02_agent_guidelines.md  _03_communication_patterns.md  _04_chapter_template.md  ch02.md  ch03.md  ch04.md  ch05.md  ch05_deepseek.md  ch05_notes.md  ch05_todo.md  drafting.md  guide.md
docs/book/ch01/: chapter.md
docs/book/ch02/: chapter.md
docs/book/ch03/: chapter.md
docs/book/ch04/: chapter.md
docs/book/ch04/assets/: figure_04_02.mmd  figure_04_03.mmd  figure_04_04.mmd  figure_04_05.mmd  figure_04_06.mmd  figure_04_07.mmd  figure_04_09.mmd  figure_04_11.mmd  figure_04_12.mmd  figure_04_13.mmd
docs/book/ch05/: chapter.md  example.md  notes.md  outline.md
docs/book/ch05/assets/: figure_05_04.mmd  figure_05_05.mmd  figure_05_06.mmd
docs/book/ch05/background/: co-scitentist.md  fep.md
docs/book/ch06/: outline.md
docs/book/ch08/: outline.md
examples/ch02/: winston_chat.py  winston_step.py  winston_streaming.py  winston_tool.py
examples/ch03/: custom.py  metacog.py  winston_chat.py  winston_cognitive.py  winston_human.py  winston_memory.py  winston_metacog.py  winston_metacognitive.py  winston_multimodal.py  winston_plan.py  winston_reason.py  winston_tool.py
examples/ch03/config/agents/: metacog.yaml  winston.json  winston.yaml  winston_cognitive.yaml  winston_memory.yaml  winston_metacog.yaml  winston_metacognitive.yaml  winston_plan.yaml  winston_planning.yaml  winston_reason.yaml  winston_reasoning.yaml
examples/ch03/workspaces/: winston_cognitive.md  winston_memory.md  winston_metacog.md  winston_metacognitive.md  winston_multimodal.md  winston_plan.md  winston_planning.md  winston_reason.md  winston_reasoning.md
examples/ch04/config/agents/: winston_human.yaml
examples/ch05/: winston_cognitive_loop.py  winston_enhanced_reasoning.py
examples/ch05/config/agents/: winston_cognitive_loop.yaml  winston_enhanced_reasoning.yaml
notebooks/: litellm.ipynb  prompt_optimization.ipynb  pyproject.toml  scrape.ipynb
notebooks/prompts/: text_contains_answer.md
prompts/ch03/intent/: general.md  help.md  task.md  weather.md
prompts/ch03/intent/classifier/: basic.md  cot.md  few_shot.md  multi.md
prompts/ch03/internal/: function_call_response.md  multi_intent_synthesis.md
prompts/ch03/optimization/: apply_gradient.md  prompt_loss.md
prompts/ch03/persona/: greeting.md  winston.md
prompts/ch04/intent/: help.md  question.md  remember_confirm.md  remember_extract.md
prompts/ch04/intent/classifier/: multi.md
prompts/ch04/knowledge/: extract_attributes.md  extract_entities.md  extract_relationships.md  qa_pairs.md  qa_pairs_json.md  reword_question.md
prompts/ch05/conversation/: summarize.md
prompts/ch05/memory/: episode_boundary_detection.md  episode_reflection.md  summarize_conversation.md  update_whiteboard.md  whiteboard_template.md
prompts/ch05/persona/: system.md  winston_template.md  winston_whiteboard.md
prompts/chapter02/: action.md  reasoning.md  system.md
prompts/chapter03/: action.md  reasoning.md
prompts/common/: generate_l1_intent.md  generate_l2_intent.md
scratch/: cl_steps.py  diffs.ipynb
scratch/notes/: PLOT.md  action.md  ch05_scribbles.md
scripts/: comball.sh  combdocs.sh  combsrc.sh
src/ch02/: pyproject.toml  winston_history.py  winston_tool.py
src/ch03/: .env.example  README.md  intent_classifiers.py  llm.py  prompt.py  tinytextgrad.py  winston_advanced.py  winston_greeting.py  winston_router.py
src/ch04/: .env.example  README.md  graph_db.py  kms.py  qa_index.py  winston_knows.py
src/ch05/: .env.example  conversational_memory.py  episodic_memory.py  intent_classifiers.py  whiteboard.py  winston_converses.py  winston_ponders.py  winston_remembers.py
src/common/: helpers.py
src/winston/: scratch.py
src/winston/agents/: base.py
src/winston/core/: __init__.py  agent.py  agent_config.py  behavior.py  messages.py  models.py  paths.py  protocols.py  registry.py  state.py  steps.py  system.py  tools.py  vision.py  workspace.py
src/winston/core/cognitive_loop/: coordinator.py  results_analyst.py
src/winston/core/memory/: coordinator.py
src/winston/core/reasoning/: constants.py  coordinator.py  hypothesis.py  inquiry.py  validation.py
src/winston/tools/: weather.py
src/winston/ui/: chainlit_app.py
tests/ch04/: test_kms.py  test_qa_index.py
tests/ch05/: test_context_reset.py  test_conversational_memory.py  test_coordinator.py  test_hypothesis.py  test_inquiry.py  test_reasoning_coordinator.py  test_validation.py
tests/core/: test_workspace.py
v1/notebooks/: .gitignore  03_optimize.ipynb  icn.ipynb  qa_store.ipynb  qtree.py  richlink.ipynb  split.ipynb  textgrad.ipynb  tinytextgrad.ipynb
v1/notebooks/prompts/: answer_question.md
v1/prompts/ch04/intent/: help.md  (+2 more)
v1/src/ch02/: .env.example  README.md  winston_basic.py
v1/src/ch03/: .env.example  intent_classifiers.py  llm.py  winston_advanced.py
v1/src/ch04/: .env.example  qa_index.py  winston_knows.py
v1/src/ch05/: README.md  conversational_memory.py  winston_ponders.py
v1/tests/ch04/: test_graph_db.py
(+27 files in other folders)
