[project]
name = "chroma-repl"
version = "0.1.0"
description = "Interactive REPL CLI tool for querying and inspecting Winston's ChromaDB intent databases."
authors = [{ name = "Donald Thompson", email = "witt3rd@witt3rd.com" }]
dependencies = [
    "common",
    "click>=8.0.0",
    "loguru>=0.7.0",
    "chromadb>=0.4.0",
    "rich>=13.0.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chroma_repl"]

[project.scripts]
chroma-repl = "chroma_repl.main:main"

[tool.uv.sources]
common = { workspace = true }
