[project]
name = "notebooks"
version = "0.1.0"
description = "Notebooks for Building LLM-Powered Agents"
authors = [{ name = "Donald Thompson", email = "witt3rd@witt3rd.com" }]
dependencies = [
    "litellm>=1.40.17",
    "textgrad>=0.1.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "qa-store>=0.1.6",
    "jinja2>=3.1.4",
    "semantic-text-splitter>=0.14.0",
    "tinytextgrad>=0.2.4",
    "ollama>=0.2.1",
    "graphviz>=0.20.3",
]
readme = "README.md"
requires-python = ">= 3.9.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.4",
    "pre-commit>=3.7.1",
    "ipywidgets>=8.1.3",
    "ipython>=8.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notebooks"]
