[project]
name = "ecaa_ch02"
version = "0.1.0"
description = "Developing a basic conversational agent"
authors = [{ name = "Donald Thompson", email = "witt3rd@witt3rd.com" }]
dependencies = ["chainlit>=1.1.301", "openai>=1.34.0", "litellm>=1.40.14"]
readme = "README.md"
requires-python = ">=3.12"

[tool.basedpyright]
typeCheckingMode = "standard"
verboseOutput = true
venvPath = ".venv"
pythonVersion = "3.12"

[tool.rye.scripts]
basic = "chainlit run src/winston_basic.py"
history = "chainlit run src/winston_history.py"
streaming = "chainlit run src/winston_streaming.py"
tool = "chainlit run src/winston_tool.py"
precommit = "pre-commit run --all-files"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit>=3.7.1"]
